Bug 40594 - FILEOPEN .docx (MSO2010) does not show CHART object
Summary: FILEOPEN .docx (MSO2010) does not show CHART object
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.3 release
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:4.2.0
Keywords:
: 46546 55715 57948 66371 67001 (view as bug list)
Depends on:
Blocks: OOXML-Chart mab4.0
  Show dependency treegraph
 
Reported: 2011-09-03 00:33 UTC by Matt Kelley
Modified: 2014-02-17 08:07 UTC (History)
16 users (show)

See Also:
Crash report or crash signature:


Attachments
Document that exhibits the bug. (15.24 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2011-09-03 00:33 UTC, Matt Kelley
Details
bt + console logs on master (6.40 KB, application/x-gzip)
2012-09-02 20:41 UTC, Julien Nabet
Details
logs during creation of docx and reopen (5.94 KB, application/zip)
2012-10-13 18:52 UTC, Julien Nabet
Details
First attachment, saved as PDF using msWord 2007 (116.18 KB, application/pdf)
2012-11-08 08:54 UTC, sasha.libreoffice
Details
unpacked trace from Julien's nice archive (thanks !) (16.15 KB, text/plain)
2012-12-05 11:27 UTC, Michael Meeks
Details
Word/Writer comparison of Bug 72838 (364.01 KB, image/jpeg)
2014-02-15 22:44 UTC, Luke
Details
Chart from Bug 67339 attachment 83023 (20.22 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-02-15 23:07 UTC, Luke
Details
Word/Writer comparison of Bug 72838 pg 39 (313.64 KB, image/jpeg)
2014-02-15 23:14 UTC, Luke
Details
Word/Writer comparison of Bug 72838 pg 41 (278.80 KB, image/jpeg)
2014-02-15 23:19 UTC, Luke
Details
Word/Writer comparison of Bug 72838 pg 41 (275.94 KB, image/jpeg)
2014-02-15 23:26 UTC, Luke
Details
Word/Writer comparison of attachment 94136 (265.80 KB, image/jpeg)
2014-02-15 23:35 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matt Kelley 2011-09-03 00:33:58 UTC
Created attachment 50857 [details]
Document that exhibits the bug.

Charts pasted into a Word 2010 .docx file from an Excel 2010 spreadsheet that remain interactive (that is, haven't been pasted as bitmap images yet) do not show up in Writer.  Instead, there's a blank space.  The same chart, however, does show up (though as a non-interactive bitmap) when it's in a .xlsx spreadsheet opened in Calc.

Steps to reproduce:

1.  Create a chart in Excel 2010.
2.  Copy and paste the chart into Word 2010.
3.  Save the document as a .docx file.
4.  Open the file in LibreOffice Writer.
5.  The chart will not be present; instead, there will be white space (which is essentially a lot of line breaks) that equals the amount of space occupied by the chart.

This problem may also occur in Office 2007, but I don't have a copy to test it.

I've attached a file that I've created using Office 2010 that exhibits the bug.

If you need any more information, just let me know!
Comment 1 Björn Michaelsen 2011-12-23 12:34:54 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 2 sasha.libreoffice 2012-01-08 22:53:08 UTC
reproduced in LibO 3.5.0 beta 1
and from MSWord 2007 the same problem
Comment 3 Rick 2012-02-14 03:42:51 UTC
Same error confirmed Ms Office 2007 and LibreOffice 3.4.5 
OOO340m1 (Build:502) on Fedora 16.
Comment 4 sasha.libreoffice 2012-02-15 01:11:51 UTC
"Version" is most early version of LibreOffice, where bug reproducible, not current version.
Comment 5 Lekow 2012-07-31 16:41:00 UTC
Reproduced in LO 3.5.5 on Windows 7 SP1.
Comment 6 V.K. 2012-09-02 16:01:19 UTC
Still present in 3.6.1.2 version. 
Unfortunately, I have a lot of such documents.
Comment 7 Julien Nabet 2012-09-02 20:41:52 UTC
Created attachment 66516 [details]
bt + console logs on master

On pc Debian x86-64 with master sources updated today, I reproduced the problem.
Since I enabled symbols, debug, I attached console logs + bt from each lines
Comment 8 Julien Nabet 2012-09-02 20:49:49 UTC
Cedric: one for you?
Comment 9 Roman Eisele 2012-09-03 08:19:34 UTC
Moved from 3.6 most annyoing bugs list to 3.5 most annoying bugs list, as appropriate (please see http://wiki.documentfoundation.org/Most_Annoying_Bugs).
Comment 10 Sebastian@SSpaeth.de 2012-09-03 08:57:30 UTC
Note the (related?) bug 51550, all OLE object, ie charts are also not saved when saving from LibO as docx. So fixing either of the bugs might warrant to retest the other.
Comment 11 Rainer Bielefeld Retired 2012-10-13 08:58:25 UTC
Reproducible] with  "LibreOffice 3.6.3.1” German UI/ German Locale [Build-ID: f8fce0b] on German WIN7 Home Premium (64bit) 

Already reproducible with LibO 3.3.3 and also with AOOo 3.4.1, so problem probably inherited from OOo 

May be roots of the problem can be reproduced very simply:
1. open new Writer document witn´h LibreOffice 3.6.3.1
2. Menu 'Insert -> Object -> Chart
3. Complete Chart insertion as simple as possible
   > Simple bar chart in document
4. Save as .docx (OOXML) and close
5. Reopen 
   Bug: No chart visible 

But unfortunately the so created sample document can not be opened with MS WORD viewer, seems to be invalid.

I will nominate this bug as HardHack on 
<http://wiki.documentfoundation.org/HardHacks> because this one is a really annoying very old bug.
Comment 12 Rainer Bielefeld Retired 2012-10-13 08:59:25 UTC
*** Bug 46546 has been marked as a duplicate of this bug. ***
Comment 13 Julien Nabet 2012-10-13 18:52:02 UTC
Created attachment 68528 [details]
logs during creation of docx and reopen

Following Rainer's comment 11, I attached logs during the creation of docx then during reopen.

Made on pc Debian x86-64 with master sources updated today.

PS: don't hesitate to grep -v "com.sun.star.awt.XWindow" and "NamedValueCollection::impl_assign: encountered a value type which I cannot handle"
Comment 14 Roman Eisele 2012-10-14 09:47:45 UTC
Comment on attachment 68528 [details]
logs during creation of docx and reopen

(Fixed MIME type)
Comment 15 Sebastian@SSpaeth.de 2012-11-08 08:39:15 UTC
Err, do note that comment 11 and subsequent test the writing of embedded charts to .docx files, which is already covered in bug 51550 as a DATALOSS. This bug seems to be about loss of charts READING a .docx file that has been created in Microsoft Office.
Comment 16 sasha.libreoffice 2012-11-08 08:54:03 UTC
Created attachment 69679 [details]
First attachment, saved as PDF using msWord 2007
Comment 17 Michael Meeks 2012-12-05 11:27:00 UTC
Still a problem with 4.0 - the (very useful) logs from Julien suggest the first 4 complaints are about docProps/app.xml:

  <HeadingPairs>
    <vt:vector size="2" baseType="variant">
      <vt:variant>
        <vt:lpstr>Title</vt:lpstr>
      </vt:variant>
      <vt:variant>
        <vt:i4>1</vt:i4>
      </vt:variant>
    </vt:vector>
  </HeadingPairs>

This section is not liked a whole lot ;-) nor is the next element:

  <TitlesOfParts>
    <vt:vector size="1" baseType="lpstr">
      <vt:lpstr/>
    </vt:vector>
  </TitlesOfParts>

But the real issue almost certainly is this one:

warn:legacy.osl:21863:1:/home/julien/compile-libreoffice/libo/writerfilter/source/dmapper/DomainMapper_Impl.cxx:3424: DomainMapper_Impl::ImportGraphic
warn:legacy.osl:21863:1:/home/julien/compile-libreoffice/libo/oox/source/helper/storagebase.cxx:74: StorageBase::StorageBase - missing base input stream
Comment 18 Michael Meeks 2012-12-05 11:27:39 UTC
Created attachment 71026 [details]
unpacked trace from Julien's nice archive (thanks !)
Comment 19 Jorendc 2013-02-01 13:27:19 UTC
*** Bug 57948 has been marked as a duplicate of this bug. ***
Comment 20 Joel Madero 2013-02-11 18:10:52 UTC
As Michael has already confirmed that it's still an issue in LibreOffice4, moving it to 3.6 MAB as we're trying to close 3.5 MAB meta tracker since 3.5 is at EOL.
Comment 21 Jorendc 2013-05-22 22:29:06 UTC
*** Bug 55715 has been marked as a duplicate of this bug. ***
Comment 22 tommy27 2013-07-31 18:37:16 UTC
unfortunately I do not have MS Excel so I cannot replicate instructions step-by-step.

If I load the test document ( attachment 50857 [details] ) in LibO 4.0.4 or 4.1.0 I only see a blank page.

should I see a chart? does Word visualize a chart on that document?
Comment 23 skiani 2013-07-31 18:44:55 UTC
Yes open the PDF attached to this bug (https://bugs.freedesktop.org/attachment.cgi?id=69679) that is what you should see.
Comment 24 tommy27 2013-07-31 19:03:31 UTC
@skiani
thanks 4 confirming issue with your pdf sample.
I'm then moving it to mab4.0 vs. mab3.6 because 3.6 has reached EOL so we are in the process of closing the meta bug.

by the way you should not change the version field that way... (you changed it from 3.3.0 to 4.1.0)

version should indicate the first version where the bug has ever been reported, so according to what I read in previous comments the first ever reproducibile version is 3.3.3 ( Comment 11 ) even though is possible that this has been inherited from OOo and was already present in 3.3.0
Comment 25 Commit Notification 2013-09-20 08:13:37 UTC
Vinaya Mandke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=13e8e9e2fe32bc77058b5869c39948b683fb81ec

fdo#40594 Fix for chart missing issue in Writer (for docx)



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 26 sasha.libreoffice 2013-09-20 09:15:34 UTC
Great thanks for fixing this bug!
Comment 27 Maxim Monastirsky 2013-09-20 10:33:46 UTC
*** Bug 68884 has been marked as a duplicate of this bug. ***
Comment 28 Maxim Monastirsky 2013-09-20 10:36:50 UTC
*** Bug 66371 has been marked as a duplicate of this bug. ***
Comment 29 Maxim Monastirsky 2013-09-22 19:02:35 UTC
*** Bug 67001 has been marked as a duplicate of this bug. ***
Comment 30 Maxim Monastirsky 2013-10-17 13:15:33 UTC
Fix verified using 4.2.0.0.alpha0+ Build ID: cc2a405915e82c4b332dd25457f76704dc536d7f TinderBox: Win-x86@39, Branch:master, Time: 2013-10-15_15:51:52.
Comment 31 Maxim Monastirsky 2013-12-18 17:39:40 UTC
*** Bug 72838 has been marked as a duplicate of this bug. ***
Comment 32 Luke 2014-02-15 22:44:48 UTC
Created attachment 94135 [details]
Word/Writer comparison of Bug 72838

I am reopening this bug, because 2 duplicates that it closed are still not rendering the charts properly. If this is not the correct course of action, please advise.

Charts still rendered correctly:

Bug 72838 
Bug 66371

tested on Version: 4.3.0.0.alpha0+  Branch:master, Time: 2014-02-13_01:44:32
Comment 33 Luke 2014-02-15 23:07:13 UTC
Created attachment 94136 [details]
Chart from Bug 67339 attachment 83023 [details]

The chart from Bug 67339 attachment 83023 [details] is also not imported correctly. Attached is a copy/paste of only the Chart. Please note:
1) Title axis is not vertically (270 deg) aligned
2) Legend is not placed at the bottom of the chart
3) First data label of 2nd column (250) is displayed on the bottom
Comment 34 Luke 2014-02-15 23:14:14 UTC
Created attachment 94137 [details]
Word/Writer comparison of Bug 72838 pg 39

Another example of charts not imported correctly from Bug 72838
Comment 35 Luke 2014-02-15 23:19:11 UTC
Created attachment 94138 [details]
Word/Writer comparison of Bug 72838 pg 41

Note that the pie chart is incorrectly rendered
Comment 36 Luke 2014-02-15 23:26:03 UTC
Created attachment 94139 [details]
Word/Writer comparison of Bug 72838 pg 41

Note the border around the chart is missing
Comment 37 Luke 2014-02-15 23:35:20 UTC
Created attachment 94140 [details]
Word/Writer comparison of attachment 94136 [details]
Comment 38 tommy27 2014-02-16 08:50:13 UTC
(In reply to comment #32)
> Created attachment 94135 [details]
> Word/Writer comparison of Bug 72838
> 
> I am reopening this bug, because 2 duplicates that it closed are still not
> rendering the charts properly. If this is not the correct course of action,
> please advise.

@Luke
first of all thank you for your tests.

however I'm closing this bug report since the issue described here was:
".docx (MSO2010) does not show CHART object"

the chart in attachment 50857 [details] is not shown in 4.1.x while it is shown in 4.2.0 after Vinaya Mandke fix (see Comment 25)

in other words, the issue here was "chart not shown at all" which is fixed.
all other "chart non perfectly rendered" issues need a separate report.
Comment 39 Luke 2014-02-16 12:20:25 UTC
@tommy27
I've worked on several other projects, and it's always been my experience that when a feature is not supported, either the original report is used until all of the test cases are working OR associated cases are reopened.

It is TDF’s policy to require new reports for failed test after the feature is only partially implemented?  If you're going to use this bug to close other reports, shouldn't those reports be working? 

So when a feature is not implemented, reporters should always use in the title, "implemented it perfectly" or they will have to keep filing bug reports during the development cycle. Very strange.
Comment 40 tommy27 2014-02-16 13:19:31 UTC
@Luke
please don't get upset.  you asked for advise to know if your REOPEN was correct. what has been told to you is that it's better to open a new report.

best thing would be to indicata that this is a "followup of Bug 40594" in the description.

as said before, the original issue was that chart were not visible at all...
now this is fixed... all the rendering imperfections you correctly pointed out has to be reported in a clean new report

the present report has already 39 comment and multiple attachements, and is getting difficult to read and follow. so the decision to open new reports and keep this closed is to keep things simpler.

best thing, as suggested, is to create new reports each one describing the exact issue you still encounter.

for developers it will be easier to fix things if bug is splitted in different parts.
Comment 41 tommy27 2014-02-16 13:31:12 UTC
... and when you open the new report please drop a line here with the new Bug number. thanks for you understanding and for your tests.
Comment 42 Luke 2014-02-16 15:04:15 UTC
@tommy27 Not upset just thought it was strange to close the parent before all the children were working. I already cloned this to create Bug 75057 and am in the process of populating it with the issues reported here. 

In my experience, new feature tend to generate a lot of comments. I'll do my best to help keep the tracker here organized.